[project]
name = "aula15-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Nery",email = "nathannery84@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
